@@ -1,18 +1,27 @@
 "use strict";
 
-var events = require ("events");
 var util = require ("util");
 var Request = require ("./request");
 var opcode = require ("./opcode");
 
 var Reader = module.exports = function (remote, globalOptions){
-  events.EventEmitter.call (this);
+  Request.call (this, opcode.RRQ, remote, globalOptions);
   
   this._windowStart = 1;
   this._windowEnd = null;
   this._windowSize = null;
   this._windowBlocksIndex = {};
   this._windowBlocks = [];
+  this._lastReceived = false;
+  this._pending = null;
+  this._oack = null;
+  this._firstWindow = true;
+  this._mayRollover = false;
+  this._rolloverFix = 0;
+  this._windowStartRollovered = false;
+  this._retransmitter = this._createRetransmitter ();
+  
+  var me = this;
   this._preFilterFn = function (e){
     return e.block >= me._windowStart;
   };
@@ -22,68 +31,48 @@ var Reader = module.exports = function (remote, globalOptions){
   this._sortFn = function (a, b){
     return a.block - b.block;
   };
-  this._lastReceived = false;
-  this._pending = null;
-  this._expected = null;
-  this._oack = null;
-  this._firstWindow = true;
   this._restransmitterStartFn = function (){
     var block = me._blockToRetransmit ();
     if (block > 0){
       //Update the window and emit back to the client the data
-      //By default rollovers to 1
       me._windowStart = block === 65535 ? 1 : block + 1;
       //The last block could have been received
       me._lastReceived = false;
       me._notifyWindow (block);
     }
-    me._request.sendAck (block);
+    me._sendAck (block);
   };
-  this._mayRollover = false;
-  this._rolloverFix = 0;
-  this._windowStartRollovered = false;
-  
-  var me = this;
-  this._request = new Request (opcode.RRQ, remote, globalOptions)
-      .on ("error", function (error){
-        me._retransmitter.reset ();
-        me.emit ("error", error);
-      })
-      .on ("abort", function (){
-        me._retransmitter.reset ();
-        me.emit ("abort");
-      })
-      .on ("close", function (){
-        me._retransmitter.reset ();
-        me.emit ("close");
-      })
-      .on ("ready", function (stats, oack){
-        //The reader doesn't make use of the rollover option, it's not safe
-        //because there isn't an specification for default values
-        me._windowEnd = me._pending = me._windowSize = stats.windowSize;
-        me._blockSize = stats.blockSize;
-        
-        //Start the timer for the first time
-        me._retransmitter.start (me._restransmitterStartFn);
-        me._oack = oack;
-        
-        delete stats.rollover;
-        me.emit ("stats", stats);
-      })
-      .on ("timeout", function (){
-        me._retransmitter.reset ();
-      })
-      .on ("data", function (data){
-        me._onData (data);
-      });
-  
-  this._retransmitter = this._request.createRetransmitter ();
 };
 
-util.inherits (Reader, events.EventEmitter);
+util.inherits (Reader, Request);
 
-Reader.prototype.abort = function (){
-  this._request.abort ();
+Reader.prototype._onError = function (error){
+  this._retransmitter.reset ();
+  this.onError (error);
+};
+
+Reader.prototype._onAbort = function (){
+  this._retransmitter.reset ();
+  this.onAbort ();
+};
+
+Reader.prototype._onClose = function (){
+  this._retransmitter.reset ();
+  this.onClose ();
+};
+
+Reader.prototype._onReady = function (stats, oack){
+  //The reader doesn't make use of the rollover option, it's not safe because
+  //there isn't an specification for default values
+  this._windowEnd = this._pending = this._windowSize = stats.windowSize;
+  this._blockSize = stats.blockSize;
+  
+  //Start the timer for the first time
+  this._retransmitter.start (this._restransmitterStartFn);
+  this._oack = oack;
+  
+  delete stats.rollover;
+  this.onStats (stats);
 };
 
 Reader.prototype._blockToRetransmit = function (){
@@ -168,11 +157,12 @@ Reader.prototype._notifyWindow = function (block){
     //Ignore DATA packets with 0 length, they are received when the file can be
     //split up in blocks that perfectly fits a window
     if (message.data.length){
-      me.emit ("data", message.data);
+      //me.emit ("data", message.data);
+      me.onData (message.data);
     }
   });
   
-  if (this._lastReceived) return this._request.close ();
+  if (this._lastReceived) return this._close ();
   
   this._pending = this._windowSize;
   this._windowBlocks = [];
@@ -220,7 +210,9 @@ Reader.prototype._onData = function (message){//console.log("<< " + message.bloc
     this._retransmitter.start (this._restransmitterStartFn);
   
     //Sort the blocks
-    this._sortWindow ();
+    if (this._windowsSize > 1){
+      this._sortWindow ();
+    }
     
     //Update the window
     this._windowStart += this._windowSize;
@@ -235,7 +227,7 @@ Reader.prototype._onData = function (message){//console.log("<< " + message.bloc
     }
     
     //ACK the current window
-    this._request.sendAck (
+    this._sendAck (
         this._windowBlocks[this._windowBlocks.length - 1].block);
     this._notifyWindow ();
   }
