@@ -1,8 +1,6 @@
 "use strict";
 
 var dgram = require ("dgram");
-var events = require ("events");
-var util = require ("util");
 var packets = require ("./packets");
 var opcode = require ("./opcode");
 var errors = require ("./errors");
@@ -13,8 +11,6 @@ var ACK_SENT = 1;
 var BLK_SENT = 2;
 
 var Request = module.exports = function (type, remote, globalOptions, size){
-  events.EventEmitter.call (this);
-  
   this._isRRQ = type === opcode.RRQ;
   this._globalOptions = globalOptions;
   //Undefined if RRQ
@@ -30,7 +26,7 @@ var Request = module.exports = function (type, remote, globalOptions, size){
   this._remoteHost = null;
   this._extensionsRetransmitted = false;
   this._extensionsEmitted = false;
-  this._retransmitter = this.createRetransmitter ();
+  this._retransmitter = this._createRetransmitter ();
   this._maxDataLength = 4;
   
   //Delay the openning to the next tick
@@ -40,36 +36,10 @@ var Request = module.exports = function (type, remote, globalOptions, size){
   });
 };
 
-util.inherits (Request, events.EventEmitter);
-
 Request.prototype.abort = function (){
   if (this._closed || this._closing || this._aborted) return;
   this._aborted = true;
-  this.sendErrorAndClose ("Aborted");
-};
-
-Request.prototype.close = function (error){
-  if (this._closed || this._closing || !this._socket) return;
-  //If multiples closes occur inside the same tick (because abort() is called),
-  //the socket throws the error "Not running" because the socket is already
-  //closed, this is why there's a closing flag. There are 2 possible cases:
-  //- (1) abort close, (2) socket close
-  //- (1) socket close, (2) abort close
-  //If it's the first case, the second close() is ignored because the request
-  //is aborted just before
-  //If it's the second case, the second abort() it's useless because the request
-  //is already closed
-  this._closing = true;
-  
-  //Store the error after the flag is set to true, otherwise the error could be
-  //used by another close()
-  if (error) this._error = error;
-  
-  var me = this;
-  //Close in the next tick to allow sending files in the same tick
-  process.nextTick (function (){
-    me._socket.close ();
-  });
+  this._sendErrorAndClose ("Aborted");
 };
 
 Request.prototype._open = function (){
@@ -106,17 +76,17 @@ Request.prototype._open = function (){
   .on ("error", function (error){
     me._closed = true;
     me._retransmitter.reset ();
-    me.emit ("error", error);
+    me._onError (error);
   })
   .on ("close", function (){
     me._closed = true;
     me._retransmitter.reset ();
-    if (me._aborted) return me.emit ("abort");
+    if (me._aborted) return me._onAbort ();
     if (me._error){
-      me.emit ("error", me._error);
+      me._onError (me._error);
     }else{
       //Transfer ended successfully
-      me.emit ("close");
+      me._onClose ();
     }
   });
   
@@ -134,6 +104,30 @@ Request.prototype._open = function (){
   
   this._state = REQ_SENT;
   this._sendAndRetransmit (buffer);
+};
+
+Request.prototype._close = function (error){
+  if (this._closed || this._closing || !this._socket) return;
+  //If multiples closes occur inside the same tick (because abort() is called),
+  //the socket throws the error "Not running" because the socket is already
+  //closed, this is why there's a closing flag. There are 2 possible cases:
+  //- (1) abort close, (2) socket close
+  //- (1) socket close, (2) abort close
+  //If it's the first case, the second close() is ignored because the request
+  //is aborted just before
+  //If it's the second case, the second abort() it's useless because the request
+  //is already closed
+  this._closing = true;
+  
+  //Store the error after the flag is set to true, otherwise the error could be
+  //used by another close()
+  if (error) this._error = error;
+  
+  var me = this;
+  //Close in the next tick to allow sending files in the same tick
+  process.nextTick (function (){
+    me._socket.close ();
+  });
 };
 
 Request.prototype._checkSize = function (){
@@ -158,7 +152,7 @@ Request.prototype._emitDefaultExtensions = function (){
     userExtensions: null
   };
   this._setStats (stats);
-  this.emit ("ready", stats);
+  this._onReady (stats);
 };
 
 Request.prototype._setStats = function (stats){
@@ -180,16 +174,16 @@ Request.prototype._onMessage = function (buffer){
   var op = buffer.readUInt16BE (0);
   
   if (op === opcode.RRQ || op === opcode.WRQ){
-    this.sendErrorAndClose (4);
+    this._sendErrorAndClose (4);
   }else if (op === opcode.DATA){
     if (this._isRRQ){
       if (!this._extensionsEmitted) this._emitDefaultExtensions ();
       if (buffer.length < 4 || buffer.length > this._maxDataLength){
         return this._sendMalformedPacketError ();
       }
-      this.emit ("data", packets.data.deserialize (buffer));
+      this._onData (packets.data.deserialize (buffer));
     }else{
-      this.sendErrorAndClose (4);
+      this._sendErrorAndClose (4);
     }
   }else if (op === opcode.ACK){
     if (!this._isRRQ){
@@ -202,10 +196,10 @@ Request.prototype._onMessage = function (buffer){
         }
       }else{
         if (buffer.length !== 4) return this._sendMalformedPacketError ();
-        this.emit ("ack", packets.ack.deserialize (buffer));
+        this._onAck (packets.ack.deserialize (buffer));
       }
     }else{
-      this.sendErrorAndClose (4);
+      this._sendErrorAndClose (4);
     }
   }else if (op === opcode.OACK){
     try{
@@ -213,7 +207,7 @@ Request.prototype._onMessage = function (buffer){
     }catch (error){
       return this._sendMalformedPacketError ();
     }
-    this._onOack (buffer);
+    this._onOackMessage (buffer);
   }else if (op === opcode.ERROR){
     if (buffer.length <= 4) return this._sendMalformedPacketError ();
     try{
@@ -221,16 +215,16 @@ Request.prototype._onMessage = function (buffer){
     }catch (error){
       return this._sendMalformedPacketError ();
     }
-    this._onError (buffer);
+    this._onErrorMessage (buffer);
   }else{
     //Unknown opcode
-    this.sendErrorAndClose (4);
+    this._sendErrorAndClose (4);
   }
 };
 
-Request.prototype._onOack = function (message){
+Request.prototype._onOackMessage = function (message){
   //OACK can be only received when RRQ/WRQ is sent
-  if (this._state !== REQ_SENT) return this.sendErrorAndClose (4);
+  if (this._state !== REQ_SENT) return this._sendErrorAndClose (4);
   
   var userExtensions = this._globalOptions.userExtensions ? {} : null;
   
@@ -241,7 +235,7 @@ Request.prototype._onOack = function (message){
       if (userExtensions){
         userExtensions[key] = message[key];
       }else{
-        return this.sendErrorAndClose (8);
+        return this._sendErrorAndClose (8);
       }
     }
   }
@@ -257,7 +251,7 @@ Request.prototype._onOack = function (message){
     if (blockSize >= 8 && blockSize <= this._globalOptions.extensions.blksize){
       infinite = true;
     }else{
-      return this.sendErrorAndClose (8);
+      return this._sendErrorAndClose (8);
     }
   }else if (this._checkSize ()){
     return;
@@ -268,7 +262,7 @@ Request.prototype._onOack = function (message){
     if (timeout > 0 && timeout <= this._timeout){
       this._timeout = timeout;
     }else{
-      return this.sendErrorAndClose (8);
+      return this._sendErrorAndClose (8);
     }
   }
   
@@ -276,7 +270,7 @@ Request.prototype._onOack = function (message){
     transferSize = ~~message.tsize;
     if (transferSize < 0 ||
         (this._size !== undefined && transferSize !== this._size)){
-      return this.sendErrorAndClose (8);
+      return this._sendErrorAndClose (8);
     }
   }
   
@@ -284,14 +278,14 @@ Request.prototype._onOack = function (message){
     windowSize = ~~message.windowsize;
     if (windowSize <= 0 ||
         windowSize > this._globalOptions.extensions.windowsize){
-      return this.sendErrorAndClose (8);
+      return this._sendErrorAndClose (8);
     }
   }
   
   if (message.rollover){
     rollover = ~~message.rollover;
     if (rollover < 0 || rollover > 1){
-      return this.sendErrorAndClose (8);
+      return this._sendErrorAndClose (8);
     }
   }
   
@@ -308,20 +302,20 @@ Request.prototype._onOack = function (message){
   if (this._isRRQ){
     //Acknowledge OACK
     //The ack of the block 0 is retransmitted from the reader
-    this.sendAck (0);
-    this.emit ("ready", stats, true);
+    this._sendAck (0);
+    this._onReady (stats, true);
   }else{
-    this.emit ("ready", stats);
+    this._onReady (stats);
   }
 };
 
-Request.prototype._onError = function (message){
+Request.prototype._onErrorMessage = function (message){
   if (this._state === REQ_SENT && message.code === 8){
     if (this._extensionsRetransmitted){
       //The server has returned an ERROR with code 8 after a RRQ/WRQ without
       //extensions. Code 8 is only used when RRQ and WRQ messages contain
       //extensions
-      return this.sendErrorAndClose (4);
+      return this._sendErrorAndClose (4);
     }
     
     //If the error code is 8, the server doesn't like one or more extensions
@@ -337,16 +331,16 @@ Request.prototype._onError = function (message){
     this._extensionsRetransmitted = true;
     this._sendAndRetransmit (buffer);
   }else{
-    this.close (new Error ("(Server) " + message.message));
+    this._close (new Error ("(Server) " + message.message));
   }
 };
 
-Request.prototype.sendAck = function (block){//console.log(">> " + block)
+Request.prototype._sendAck = function (block){//console.log(">> " + block)
   this._state = ACK_SENT;
   this._send (packets.ack.serialize (block));
 };
 
-Request.prototype.sendBlock = function (block, buffer){//console.log(">> " + block)
+Request.prototype._sendBlock = function (block, buffer){//console.log(">> " + block)
   this._state = BLK_SENT;
   this._send (packets.data.serialize (block, buffer));
 };
@@ -357,21 +351,21 @@ Request.prototype._sendError = function (code, message){
 
 Request.prototype._sendMaxSizeErrorAndClose = function (){
   this._send (packets.error.serialize (8));
-  this.close (new Error ("The file cannot be bigger than 33554432 bytes"));
+  this._close (new Error ("The file cannot be bigger than 33554432 bytes"));
 };
 
 Request.prototype._sendMalformedPacketError = function (){
-  this.sendErrorAndClose ("Malformed TFTP message");
+  this._sendErrorAndClose ("Malformed TFTP message");
 };
 
-Request.prototype.sendErrorAndClose = function (code){
+Request.prototype._sendErrorAndClose = function (code){
   var message;
   if (typeof code === "string"){
     message = code;
     code = 0;
   }
   this._send (packets.error.serialize (code, message));
-  this.close (new Error (errors[code] || message));
+  this._close (new Error (errors[code] || message));
 };
 
 Request.prototype._sendAndRetransmit = function (buffer){
@@ -389,7 +383,7 @@ Request.prototype._send = function (buffer){
       this._globalOptions.hostname);
 };
 
-Request.prototype.createRetransmitter = function (){
+Request.prototype._createRetransmitter = function (){
   return new Retransmitter (this);
 };
 
@@ -411,7 +405,7 @@ Retransmitter.prototype.start = function (fn){
   this._timer = setTimeout (function (){
     if (!me._pending){
       //No more retries
-      me._request.close (new Error ("Timed out"));
+      me._request._close (new Error ("Timed out"));
     }else{
       me._pending--;
       fn ();
