@@ -1,6 +1,5 @@
 "use strict";
 
-var events = require ("events");
 var util = require ("util");
 var Request = require ("./request");
 var opcode = require ("./opcode");
@@ -8,33 +7,59 @@ var opcode = require ("./opcode");
 var hex = require ("hex");
 
 var Writer = module.exports = function (remote, globalOptions, size){
-  events.EventEmitter.call (this);
+  Request.call (this, opcode.WRQ, remote, globalOptions, size);
   
   this._blockMaker = null;
   this._window = null;
-  
-  var me = this;
-  this._request = new Request (opcode.WRQ, remote, globalOptions, size)
-      .on ("error", function (error){
-        me.emit ("error", error);
-      })
-      .on ("abort", function (){
-        me.emit ("abort");
-      })
-      .on ("ack", function (ack){
-        me._onAck (ack);
-      })
-      .on ("ready", function (stats){
-        me._blockMaker = new BlockMaker (stats.blockSize, size);
-        me._window = new Window (stats.blockSize, stats.windowSize, size,
-            stats.rollover, this);
-        
-        delete stats.rollover;
-        me.emit ("stats", stats);
-      });
 };
 
-util.inherits (Writer, events.EventEmitter);
+util.inherits (Writer, Request);
+
+Writer.prototype.send = function (buffer, cb){
+  //Create all the possible blocks from the given buffer
+  this._blockMaker.feed (buffer);
+  var me = this;
+  
+  var next = function (){
+    if (me._window.isEOF ()){
+      me._onClose = cb;
+      me._close ();
+    }else{
+      newBlock ();
+    }
+  };
+  
+  var newBlock = function (){
+    //Feed the window till it is full
+    //A null block signals that no more blocks can be obtained from the buffer
+    var block = me._blockMaker.next ();
+    if (!block) return cb ();
+    me._window.feed (block, next);
+  };
+  
+  newBlock ();
+};
+
+Writer.prototype._onError = function (error){
+  this.onError (error);
+};
+
+Writer.prototype._onAbort = function (){
+  this.onAbort ();
+};
+
+Writer.prototype._onReady = function (stats, oack){
+  this._blockMaker = new BlockMaker (stats.blockSize, this._size);
+  this._window = new Window (stats.blockSize, stats.windowSize, stats.rollover,
+      this);
+  
+  delete stats.rollover;
+  this.onStats (stats);
+};
+
+Writer.prototype._onAck = function (ack){//console.log("<< " + ack.block)
+  this._window.resume (ack.block);
+};
 
 var BlockMaker = function (blockSize, size){
   this._current = 0;
@@ -120,13 +145,11 @@ BlockMaker.prototype.next = function (){
   return block;
 };
 
-var Window = function (blockSize, windowSize, size, rollover, request){
+var Window = function (blockSize, windowSize, rollover, request){
   this._blockSize = blockSize;
   this._windowSize = windowSize;
-  this._size = size;
   this._rollover = rollover;
   this._rolloverFix = rollover === 0 ? 1 : 0;
-  this._request = request;
   this._block = 0;
   this._start = 1;
   this._end = windowSize;
@@ -134,11 +157,12 @@ var Window = function (blockSize, windowSize, size, rollover, request){
   this._eof = false;
   this._mayRollover = false;
   this._blocks = [];
-  var me = this;
+  
   this._sendFn = function (block){
-    me._request.sendBlock (block.block, block.data);
+    request._sendBlock (block.block, block.data);
   };
-  this._retransmitter = request.createRetransmitter ();
+  var me = this;
+  this._retransmitter = request._createRetransmitter ();
   this._restransmitterSendFn = function (){
     me._blocks.forEach (me._sendFn);
   };
@@ -219,40 +243,4 @@ Window.prototype.resume = function (block){
   var cb = this._cb;
   this._cb = null;
   cb ();
-};
-
-Writer.prototype.abort = function (){
-  this._request.abort ();
-};
-
-Writer.prototype.send = function (buffer, cb){
-  //Create all the possible blocks from the given buffer
-  this._blockMaker.feed (buffer);
-  var me = this;
-  
-  var next = function (){
-    if (me._window.isEOF ()){
-      me._request
-          .on ("close", function (){
-            cb ();
-          })
-          .close ();
-    }else{
-      newBlock ();
-    }
-  };
-  
-  var newBlock = function (){
-    //Feed the window till it is full
-    //A null block signals that no more blocks can be obtained from the buffer
-    var block = me._blockMaker.next ();
-    if (!block) return cb ();
-    me._window.feed (block, next);
-  };
-  
-  newBlock ();
-};
-
-Writer.prototype._onAck = function (ack){//console.log("<< " + ack.block)
-  this._window.resume (ack.block);
 };
