@@ -62,17 +62,17 @@ util.inherits (PutStream, stream.Writable);
 
 PutStream.prototype._createWriter = function (cb){
   var me = this;
-  this._writer = new Writer (this._remote, this._globalOptions, this._size)
-      .on ("error", function (error){
-        me.emit ("error", error);
-      })
-      .on ("abort", function (){
-        me.emit ("abort");
-      })
-      .on ("stats", function (stats){
-        cb ();
-        me.emit ("stats", stats);
-      });
+  this._writer = new Writer (this._remote, this._globalOptions, this._size);
+  this._writer.onError = function (error){
+    me.emit ("error", error);
+  };
+  this._writer.onAbort = function (){
+    me.emit ("abort");
+  };
+  this._writer.onStats = function (stats){
+    cb ();
+    me.emit ("stats", stats);
+  };
 };
 
 PutStream.prototype._write = function (chunk, encoding, cb){
